// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalPreviewFooter /> should render a footer with comments counters only 1`] = `
<Counters>
  <div
    className="card__counters__item card__counters__item--comments"
  >
    <div
      className="card__counters__value"
    >
      13
    </div>
    <FormattedMessage
      id="comment.count_no_nb"
      tagName="div"
      values={
        Object {
          "count": 13,
        }
      }
    />
  </div>
</Counters>
`;

exports[`<ProposalPreviewFooter /> should render a footer with donation infos 1`] = `
<Counters>
  <div
    className="card__counters__item card__counters__item--comments"
  >
    <div
      className="card__counters__value"
    >
      15000
       €
    </div>
    <FormattedMessage
      id="donation_amount_collected.count_no_nb"
      tagName="div"
      values={
        Object {
          "count": 15000,
        }
      }
    />
  </div>
  <div
    className="card__counters__item card__counters__item--comments"
  >
    <div
      className="card__counters__value"
    >
      5
    </div>
    <FormattedMessage
      id="donation.count_no_nb"
      tagName="div"
      values={
        Object {
          "count": 5,
        }
      }
    />
  </div>
</Counters>
`;

exports[`<ProposalPreviewFooter /> should render a footer with votes and comments counters 1`] = `
<Counters>
  <div
    className="card__counters__item card__counters__item--comments"
  >
    <div
      className="card__counters__value"
    >
      13
    </div>
    <FormattedMessage
      id="comment.count_no_nb"
      tagName="div"
      values={
        Object {
          "count": 13,
        }
      }
    />
  </div>
  <div
    className="card__counters__item card__counters__item--votes"
  >
    <div
      className="card__counters__value"
    >
      42
    </div>
    <FormattedMessage
      id="vote.count_no_nb"
      tagName="div"
      values={
        Object {
          "count": 42,
        }
      }
    />
  </div>
  <div
    className="card__counters__item card__counters__item--votes"
  >
    <div
      className="card__counters__value"
    >
      192
    </div>
    <FormattedMessage
      id="points-count"
      tagName="div"
      values={
        Object {
          "num": 192,
        }
      }
    />
  </div>
</Counters>
`;

exports[`<ProposalPreviewFooter /> should render a footer with votes counters only 1`] = `
<Counters>
  <div
    className="card__counters__item card__counters__item--votes"
  >
    <div
      className="card__counters__value"
    >
      42
    </div>
    <FormattedMessage
      id="vote.count_no_nb"
      tagName="div"
      values={
        Object {
          "count": 42,
        }
      }
    />
  </div>
  <div
    className="card__counters__item card__counters__item--votes"
  >
    <div
      className="card__counters__value"
    >
      192
    </div>
    <FormattedMessage
      id="points-count"
      tagName="div"
      values={
        Object {
          "num": 192,
        }
      }
    />
  </div>
</Counters>
`;

exports[`<ProposalPreviewFooter /> should render a footer without counters 1`] = `""`;
